# job-application-automation

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml
go/hackernews/: README.md  go.mod  go.sum  main.go
python/MFA-handling/: main.py
python/amazon-global-price-comparison/: .env.example  README.md  main.py  pyproject.toml
python/amazon-product-scraping/: .env.example  README.md  main.py  pyproject.toml
python/basic-caching/: README.md  main.py  requirements.txt
python/basic-recaptcha/: README.md  main.py
python/browserbase-reducto/: README.md  main.py  pyproject.toml
python/business-lookup/: README.md  main.py
python/cartesia-form-filling/: .env.example  .gitignore  README.md  cartesia.toml  config.py  config.toml  form_filling_node.py  main.py  pyproject.toml  stagehand_form_filler.py
python/company-address-finder/: README.md  main.py
python/company-value-prop-generator/: README.md  main.py
python/context/: README.md  main.py
python/council-events/: README.md  main.py
python/download-financial-statements/: README.md  main.py
python/exa-browserbase/: .env  .env.example  README.md  main.py  pyproject.toml
python/form-filling/: README.md  main.py
python/gemini-cua/: README.md  main.py
python/gift-finder/: README.md  main.py
python/google-trends/: .env.example  README.md  main.py  pyproject.toml
python/job-application/: README.md  main.py
python/license-verification/: README.md  main.py
python/manual-MFA-with-contexts/: README.md  requirements.txt
python/manual-mfa-with-contexts/: README.md  main.py
python/mfa-handling/: README.md  main.py  requirements.txt
python/nurse-verification/: README.md  main.py
python/pickleball/: README.md  main.py
python/playwright-mfa-handling/: README.md  main.py  pyproject.toml
python/polymarket-research/: README.md  main.py
python/proxies/: README.md  main.py
python/proxies-weather/: README.md  main.py  requirements.txt
python/sec-filing-research/: .env.example  README.md  main.py  pyproject.toml
python/website-link-tester/: README.md  main.py
typescript/MFA-handling/: README.md  index.ts
typescript/amazon-global-price-comparison/: .env.example  README.md  index.ts  package.json
typescript/amazon-product-scraping/: .env.example  README.md  index.ts  package.json
typescript/basic-caching/: README.md  index.ts  package.json
typescript/basic-recaptcha/: README.md  index.ts
typescript/browserbase-reducto/: .env.example  README.md  index.ts  package.json
typescript/business-lookup/: README.md  index.ts
typescript/company-address-finder/: README.md  index.ts
typescript/company-value-prop-generator/: README.md  index.ts
typescript/context/: README.md  index.ts
typescript/council-events/: README.md  index.ts
typescript/download-financial-statements/: README.md  index.ts
typescript/dynamic-form-filling/: README.md  index.ts
typescript/exa-browserbase/: README.md  index.ts  package.json
typescript/form-filling/: README.md  index.ts
typescript/gemini-3-flash/: README.md  index.ts
typescript/gemini-cua/: README.md  index.ts
typescript/gift-finder/: README.md  index.ts
typescript/google-trends/: README.md  index.ts  package.json
typescript/job-application/: README.md  index.ts
typescript/license-verification/: README.md  index.ts
typescript/manual-MFA-with-contexts/: README.md
typescript/manual-mfa-with-contexts/: README.md  index.ts  package.json
typescript/mfa-handling/: package.json
typescript/microsoft-cua/: README.md  index.ts
typescript/pickleball/: README.md  (+1 more)
(+26 files in other folders)
