[project]
name = "amazon-global-price-comparison"
version = "0.1.0"
description = "Compare Amazon product prices across multiple countries using geolocation proxies"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "browserbase",
    "python-dotenv",
    "pydantic>=2.0.0",
    "stagehand",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
