[project]
name = "browserbase-form-filler"
version = "0.1.0"
description = "Voice agent that fills web forms using Stagehand browser automation"
requires-python = ">=3.10"
dependencies = [
    "cartesia-line",
    "stagehand>=3.0.0",
    "google-genai>=1.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.12.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
